refactor code and add update in DocumentController
